k8s/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  api-deployment
  labels:
    app.kubernetes.io/name: api
    app.kubernetes.io/component: server
    app.kubernetes.io/part-of: auth-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: api
      app.kubernetes.io/component: server
      app.kubernetes.io/part-of: auth-app
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: api
        app.kubernetes.io/component: server
        app.kubernetes.io/part-of: auth-app
    spec:
      # initContainers:
        # Init containers are exactly like regular containers, except:
          # - Init containers always run to completion.
          # - Each init container must complete successfully before the next one starts.
      imagePullSecrets:
        - name: docker-hub-secret
      containers:
      - name:  api
        image:  laurentt/projet5-gke-node-api:latest
        ports:
          - containerPort:  80
        resources: 
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
        livenessProbe:
          httpGet:
            path: /api/user/current
            port: 80
          initialDelaySeconds: 15
          periodSeconds: 15
        readinessProbe:
          httpGet:
            path: /api/user/current
            port: 80
          initialDelaySeconds: 15
          periodSeconds: 15
