k8s/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-service
  labels: 
    app.kubernetes.io/name: api
    app.kubernetes.io/component: server
    app.kubernetes.io/part-of: auth-app
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
    # If you set the `spec.type` field to `NodePort` and you want a specific port number,
    # you can specify a value in the `spec.ports[*].nodePort` field.
  selector:
    app.kubernetes.io/name: api
    app.kubernetes.io/component: server
    app.kubernetes.io/part-of: auth-app
